@@ -101,6 +101,9 @@ class FilesystemRepository(DataStoreRepository, AbstractRepository):
         return self.troveStore.getTrove(pkgName, version, flavor,
                                         withFiles = withFiles)
 
+    def getParentTroves(self, name, version, flavor):
+        return self.troveStore.getParentTroves(name, version, flavor)
+
     def addTrove(self, pkg):
 	return self.troveStore.addTrove(pkg)
 
