@@ -28,6 +28,8 @@ Changes in @NEW@:
     * The web interface to a conary repository will now print an error
       message instead of a traceback when adding an entitlement class
       with access to a group that does not exist.
+    * Parent troves in repository changeset caches are now invalidated
+      when a member trove is invalidated (CNY-746)
 
 Changes in 1.1.4:
   o Client Changes:
